--- a/tinker/events/templates/events-home.html
+++ b/tinker/events/templates/events-home.html
@@ -128,27 +128,29 @@
                 </div>
 
                 <br/>
-                <!-- Modal Core -->
-                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-                     aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal"
-                                        aria-hidden="true">&times;</button>
-                                <h4 class="modal-title" id="myModalLabel">Are you sure you want to delete?</h4>
-                            </div>
-                            <div class="modal-body">
-                                Your event page will be unpublished and removed from the calendar.
-                            </div>
-                            <div class="modal-footer">
-                                <a id="modal-confirm" href="/event/delete/formid"
-                                   class="btn btn-primary btn-alert modal-confirm">Delete</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block modalhtml %}
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"
+                            aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">Are you sure you want to delete?</h4>
+                </div>
+                <div class="modal-body">
+                    Your event page will be unpublished and removed from the calendar.
+                </div>
+                <div class="modal-footer">
+                    <a id="modal-confirm" href="/event/delete/formid"
+                       class="btn btn-primary btn-alert modal-confirm">Delete</a>
+                </div>
             </div>
         </div>
     </div>
