--- a/tinker/admin/publish/templates/publish-home.html
+++ b/tinker/admin/publish/templates/publish-home.html
@@ -10,11 +10,29 @@
 {% block page_title %}Bethel University Tinker{% endblock %}
 
 {% block main_content %}
+    {#    <script type="text/javascript">#}
+    {#        function publishAsset(type, id, counter) {#}
+    {#            var destination = $('input[name=publish-to]:checked', '#publish-search-form').val();#}
+    {#            var url = "/admin/publish-manager/publish/" + destination + "/" + type + "/" + id;#}
+    {#            $.post(url, function (data) {#}
+    {#                $("#publish_button_" + counter).text(data);#}
+    {#            });#}
+    {#        }#}
+    {##}
+    {#        function moreInfo(type, id) {#}
+    {#            var input_data = {'type': type, 'id': id};#}
+    {#            var url = "{{ url_for('publish-manager.PublishManagerView:more_info') }}";#}
+    {#            $.post(url, input_data, function (data) {#}
+    {#                $('.dialog-text').html(data);#}
+    {#            });#}
+    {#        }#}
+    {#    </script>#}
+
     <div class="content">
         <div class="container-fluid">
-            <h3 class="row subtitle">Automated publishers</h3>
-            <hr/>
-            <div class="row">
+            <div class="col-md-12">
+                <h3 class="subtitle">Automated publishers</h3>
+                <hr/>
                 <a href='/admin/publish-manager/program-feeds' class="btn btn-primary">Program Feeds</a>
                 </br>
                 </br>
@@ -22,48 +40,37 @@
                     <div class="content">
                         <p>Blocks that are published publish out each page in the relationships tab.</p>
 
-{#                        <div id="dialog" class="reveal-modal" data-reveal>#}
-{#                            <p class='dialog-text'>. . . Loading . . .</p>#}
-{#                            <a class="close-reveal-modal">&#215;</a>#}
-{#                        </div>#}
-
                         <form action="." id="publish-search-form">
 
-                            <div class="col-sm-4">
-                                <div class="form-group">
-                                    Search by Name:
-                                    <input type="text" id="publish-search-by-name" class="form-control publish-search"/>
-                                </div>
+                            <div id="publish-first-col" class="col-sm-4">
+                                Search by Name:
+                                <input type="text" id="publish-search-by-name" class="form-control publish-search"/>
                             </div>
                             <div class="col-sm-4">
-                                <div class="form-group">
-                                    Search by Content:
-                                    <input type="text" id="publish-search-by-content"
-                                           class="form-control publish-search"/>
-                                </div>
+                                Search by Content:
+                                <input type="text" id="publish-search-by-content"
+                                       class="form-control publish-search"/>
+                            </div>
+                            <div class="col-sm-4">
+                                Search by Metadata:
+                                <input type="text" id="publish-search-by-metadata"
+                                       class="form-control publish-search"/>
                             </div>
 
-                            <div class="col-sm-4">
-                                <div class="form-group">
-                                    Search by Metadata:
-                                    <input type="text" id="publish-search-by-metadata"
-                                           class="form-control publish-search"/>
-                                </div>
-                            </div>
                             <div class="large-6 columns">
                                 <label>Publish to:
-                                <div class="radio">
-                                    <label>
-                                        <input type="radio" name="optionsRadios" checked="true">
-                                        Staging
-                                    </label>
-                                </div>
-                                <div class="radio">
-                                    <label>
-                                        <input type="radio" name="optionsRadios">
-                                        Production and Staging
-                                    </label>
-                                </div>
+                                    <div class="radio">
+                                        <label>
+                                            <input type="radio" name="optionsRadios" checked="true">
+                                            Staging
+                                        </label>
+                                    </div>
+                                    <div class="radio">
+                                        <label>
+                                            <input type="radio" name="optionsRadios">
+                                            Production and Staging
+                                        </label>
+                                    </div>
                                 </label>
                             </div>
                             <div class="large-2 columns">
@@ -90,7 +97,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="col-md-12">
                 <div class="large-12 columns">
                     <table>
                         <thead>
@@ -129,6 +136,19 @@
             function updateTable(data) {
                 // Todo if no data exists, display message
                 $("#publish-table").html(data);
+                $('.more-info').click(function () {
+                    $('#dialog-text').html(". . . Loading . . .");
+                    var type = $(this).data('publish-type');
+                    var id = $(this).data('publish-id');
+                    moreInfo(type, id)
+                });
+                $('.publishButton').click(function () {
+                    $('#dialog-text').html(". . . Loading . . .");
+                    var type = $(this).data('publish-type');
+                    var id = $(this).data('publish-id');
+                    var counter = $(this).data('counter');
+                    publishAsset(type, id, counter)
+                });
             }
 
             function loadTableForSearch(name_value, content_value, metadata_value, pages_value, blocks_value, files_value, folders_value) {
@@ -169,13 +189,13 @@
             }
 
             $('.publish-search').keyup(function () {
-                search()
+                search();
+
             });
 
             function publishAsset(type, id, counter) {
                 var destination = $('input[name=publish-to]:checked', '#publish-search-form').val();
                 var url = "/admin/publish-manager/publish/" + destination + "/" + type + "/" + id;
-                console.log("TEST");
                 $.post(url, function (data) {
                     $("#publish_button_" + counter).text(data);
                 });
@@ -185,18 +205,27 @@
                 var input_data = {'type': type, 'id': id};
                 var url = "{{ url_for('publish-manager.PublishManagerView:more_info') }}";
                 $.post(url, input_data, function (data) {
-                    $('.dialog-text').html(data);
+                    $('#dialog-text').html(data);
                 });
             }
-
-            $(".close-reveal-modal").click(function () {
-                $('.dialog-text').html(". . . Loading . . .");
-            });
 
         })
         ;
     </script>
 
+{% endblock %}
+
+{% block modalhtml %}
+    <div id="dialog" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+         aria-hidden="true" data-reveal>
+        <div id="publish-modal" class="modal-dialog">
+            <div class="modal-content">
+                <div id="dialog-text" class="modal-body">
+                </div>
+            </div>
+        </div>
+        <a class="close-reveal-modal">&#215;</a>
+    </div>
 {% endblock %}
 
 {% block scripts %}
