--- a/tinker/admin/publish/templates/publish-more-info.html
+++ b/tinker/admin/publish/templates/publish-more-info.html
@@ -1,32 +1,39 @@
-{% if name %}
-<h2>{{ name }}</h2>
-{%  endif %}
-    <table>
-        <tr>
-            <td>Title</td>
-            <td>{{ title }}</td>
-        </tr>
-        <tr>
-            <td>Path</td>
-            <td>{{ path }}</td>
-        </tr>
-        <tr>
-            <td>Type</td>
-            <td>{{ info_type }}</td>
-        </tr>
-    </table>
+<div id="more-info-content" class="content">
+    <div class="container-fluid">
+        <div class="col-md-12">
 
-<div class="row">
+            {% if name %}
+                <h2>{{ name }}</h2>
+            {% endif %}
+            <div class="col-md-12">
+                <div class="row">
 
-    <div class="large-6 columns">
-        <h4>WWW last published</h4>
-        <p><a href="https://www.bethel.edu/{{ path }}" target="_blank">{{ www_publish_date }}</a></p>
-        <iframe src="https://www.bethel.edu/{{ path }}" height="400" width="400"></iframe>
-    </div>
+                    <div><p>Title: {{ title }}</p></div>
 
-    <div class="large-6 columns">
-        <h4>Staging last published</h4>
-        <p><a href="https://staging.bethel.edu/{{ path }}" target="_blank">{{ staging_publish_date }}</a></p>
-        <iframe src="https://staging.bethel.edu/{{ path }}" height="400" width="400"></iframe>
+                    <div><p>Path: {{ path }}</p></div>
+
+                    <div><p>Type: {{ info_type }}</p></div>
+                </div>
+            </div>
+
+            <div class="row">
+
+                <div class="col-sm-6">
+                    <h4>WWW last published</h4>
+                    <p><a href="https://www.bethel.edu/{{ path }}" target="_blank">{{ www_publish_date }}</a>
+                    </p>
+                    <iframe src="https://www.bethel.edu/{{ path }}" height="400" width="400"></iframe>
+                </div>
+
+                <div class="col-sm-6">
+                    <h4>Staging last published</h4>
+                    <p><a href="https://staging.bethel.edu/{{ path }}"
+                          target="_blank">{{ staging_publish_date }}</a>
+                    </p>
+                    <iframe src="https://staging.bethel.edu/{{ path }}" height="400" width="400"></iframe>
+                </div>
+            </div>
+
+        </div>
     </div>
 </div>
