--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -1,4 +1,4 @@
-.redirect-row{
+.redirect-row {
     cursor: pointer;
 }
 
@@ -199,7 +199,7 @@ input#author {
 }
 
 /*input#cpath {*/
-    /*margin-bottom: 5px;*/
+/*margin-bottom: 5px;*/
 /*}*/
 
 input {
@@ -246,14 +246,14 @@ textarea {
     height: 150px;
 }
 
-.modal-backdrop {
-    z-index: -1;
+#publish-modal {
+    width: 95%;
 }
 
 /* todo: come up with a way to generalize these tags */
 
 /*select#heading {*/
-    /*margin-left: 15px;*/
+/*margin-left: 15px;*/
 /*}*/
 
 div#cke_biography {
@@ -311,6 +311,15 @@ div#cke_registration_details {
     background-color: #F5F5F5;
     box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0);
 }
+
+/*#more-info-card {*/
+    /*!*background-color: #A2968A;*!*/
+    /*box-shadow: 3px 4px 4px 3px rgba(0, 0, 0, 0.1);*/
+/*}*/
+
+/*#more-info-content {*/
+    /*padding-top: 90px;*/
+/*}*/
 
 .nav .active a {
     color: #DE8626 !important;
@@ -441,17 +450,21 @@ label {
     font-family: Muli, Helvetica Neue, sans-serif;
 }
 
+#publish-first-col {
+    padding-left: 0px;
+}
+
 /* Checkbox inputs */
 
 input[type='checkbox'] {
     -webkit-appearance: none;
-	background-color: #FFFFFF;
-	border: 2px solid #9A9A9A;
-	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
-	padding: 2px;
-	border-radius: 3px;
-	display: inline-block;
-	position: relative;
+    background-color: #FFFFFF;
+    border: 2px solid #9A9A9A;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+    padding: 2px;
+    border-radius: 3px;
+    display: inline-block;
+    position: relative;
     width: 16px;
     height: 16px;
     cursor: pointer;
@@ -460,48 +473,48 @@ input[type='checkbox'] {
 }
 
 input[type='checkbox']:active, input[type='checkbox']:checked:active {
-	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px 1px 3px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     opacity: 1;
 }
 
 input[type='checkbox']:checked {
-	background-color: #FFFFFF;
-	border: 2px solid #66615b;
-	box-shadow: 0 1px 2px rgba(0,0,0,0.05),
-    inset 0px -15px 10px -12px rgba(0,0,0,0.05),
-    inset 15px 10px -12px rgba(255,255,255,0.1);
-	color: #66615b;
+    background-color: #FFFFFF;
+    border: 2px solid #66615b;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05),
+    inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05),
+    inset 15px 10px -12px rgba(255, 255, 255, 0.1);
+    color: #66615b;
     cursor: pointer;
     opacity: 1;
 }
 
 input[type='checkbox']:checked:after {
     content: '\2713';
-	font-size: 19px;
-	position: absolute;
-	top: -5px;
-	left: -1px;
-	color: #66615b;
+    font-size: 19px;
+    position: absolute;
+    top: -5px;
+    left: -1px;
+    color: #66615b;
 }
 
 input[type='checkbox']:hover:after {
     content: '\2713';
-	font-size: 19px;
-	position: absolute;
-	top: -5px;
-	left: -1px;
-	color: #66615b;
+    font-size: 19px;
+    position: absolute;
+    top: -5px;
+    left: -1px;
+    color: #66615b;
     border-color: #66615b
 }
 
 input[type='checkbox']:checked:hover:after {
     content: '\2713';
-	font-size: 19px;
-	position: absolute;
-	top: -5px;
-	left: -1px;
-	color: #66615b;
+    font-size: 19px;
+    position: absolute;
+    top: -5px;
+    left: -1px;
+    color: #66615b;
 }
 
 @media (min-width: 992px) {
