--- a/tinker/office_hours/templates/office-hours-form.html
+++ b/tinker/office_hours/templates/office-hours-form.html
@@ -8,7 +8,7 @@
             width: 25% !important;
             display: inline-block !important;
         }
-   </style>
+    </style>
 {% endblock %}
 
 {% block page_title %}
@@ -17,36 +17,39 @@
 
 {% macro CheckFieldLabel(field) -%}
     {% if 'close' in field.name and 'next_closed_for_chapel' not in field.name %}
-{#    {% elif '_open' in field.name %}#}
+        {#    {% elif '_open' in field.name %}#}
     {% elif field.label.text != '' and field.type not in ['FormField', 'CSRFTokenField', 'ExceptionsField'] and not field.hidden %}
         <label for="{{ field.name }}">
-           {{ field.label.text }}{% if field.flags.required %} * {% endif %}
+            {{ field.label.text }}{% if field.flags.required %} * {% endif %}
         </label>
         {% if field.description != '' %}
             <p>{{ field.description }}</p>
         {% endif %}
     {% endif %}
 
-{%  endmacro %}
+{% endmacro %}
 
 {% macro ExceptionsFieldset() -%}
 
     <fieldset class="exceptions-fieldset">
         <legend>Exception 1</legend>
-            <label for="exception_date">
-               Exception Date
-             </label>
-            <input class="datepicker" id="date1" name="date1" type="text" value="">
-            <label for="exception_open1">
-               Open *
-             </label>
-                <div class="large-12 columns timeRange">
-                    <input class="time start ui-timepicker-input" id="open1" name="open1" type="text" value="" autocomplete="off">
-                    - <input class="time end ui-timepicker-input" id="close1" name="close1" type="text" value="" autocomplete="off">
-                </div>
+        <label for="exception_date">
+            Exception Date
+        </label>
+        <input class="datepicker" id="date1" name="date1" type="text" value="">
+        <label for="exception_open1">
+            Open *
+        </label>
+        <div class="large-12 columns timeRange">
+            <input class="time start ui-timepicker-input" id="open1" name="open1" type="text" value=""
+                   autocomplete="off">
+            - <input class="time end ui-timepicker-input" id="close1" name="close1" type="text" value=""
+                     autocomplete="off">
+        </div>
     </fieldset>
     <a href="javascript:void(0);" id="add_exception_button" class="button tiny">Add Another Exception</a>
-    <a href="javascript:void(0);" id="remove_exception_button" style="display:none" class="button tiny alert">Remove Exception</a>
+    <a href="javascript:void(0);" id="remove_exception_button" style="display:none" class="button tiny alert">Remove
+        Exception</a>
 
 {% endmacro %}
 
@@ -66,82 +69,82 @@
 
 
 {% block main_content %}
-  <div class="row">
-  <div class="large-12 columns">
+    <div class="row">
+        <div class="large-12 columns">
 
-    <p>Some Copy</p>
-    <h4>BU Standard Hours</h4>
-    {% set standard = standard_edit_data['current'] %}
-    {{ current_hours(standard, False) }}
+            <p>Some Copy</p>
+            <h4>BU Standard Hours</h4>
+            {% set standard = standard_edit_data['current'] %}
+            {{ current_hours(standard, False) }}
 
-    <h4>{{ mdata['title'] }}</h4>
-{#    <h4>Current Hours</h4>#}
-    {% set current = edit_data['current'] %}
-    {{ current_hours(current) }}
+            <h4>{{ mdata['title'] }}</h4>
+            {#    <h4>Current Hours</h4>#}
+            {% set current = edit_data['current'] %}
+            {{ current_hours(current) }}
 
-      <form id="officehoursform" action="/office-hours/" method="post" enctype="multipart/form-data">
-      <input type="hidden" name="block_id" id="block_id" value="{{ block_id }}"/>
+            <form id="officehoursform" action="/office-hours/" method="post" enctype="multipart/form-data">
+                <input type="hidden" name="block_id" id="block_id" value="{{ block_id }}"/>
 
-        {% if form.errors %}
-          <div class="alert alert-error">
-            <div data-alert class="alert-box alert radius">
-                There were errors with your form.
-                <a href="#" class="close">&times;</a>
-              </div>
-            </div>
-        {% endif %}
-
-        {{ form.hidden_tag() }}
-        {% for field in form if field.widget.input_type != 'hidden' %}
-            {{ CheckFieldLabel(field) }}
-
-            {% for error in form.errors[field.name] %}
-                <div class="alert alert-error">
-                  <div data-alert class="alert-box alert radius">
-                    {{ error }}
-                    <a href="#" class="close">&times;</a>
-                  </div>
-                </div>
-            {% endfor %}
-
-            {% if field.type == 'FormField' %}
-                <div class="large-6 columns">
-                    {{ ExceptionForm(field) }}
-                </div>
-
-            {% elif field.type == 'StringField' %}
-                {% if 'open' in field.name %}
-                    <div class="large-12 columns timeRange">
-                    {{ field(class='time start') }}
-                {% elif 'close' in field.name %}
-                    - {{ field(class='time end') }}
+                {% if form.errors %}
+                    <div class="alert alert-error">
+                        <div data-alert class="alert-box alert radius">
+                            There were errors with your form.
+                            <a href="#" class="close">&times;</a>
+                        </div>
                     </div>
-                {% else %}
-                    {{ field(class='datepicker') }}
                 {% endif %}
 
-            {% elif field.type == 'NextOpenField' %}
-                <fieldset>
-                    <legend>Next</legend>
+                {{ form.hidden_tag() }}
+                {% for field in form if field.widget.input_type != 'hidden' %}
+                    {{ CheckFieldLabel(field) }}
 
-            {% elif field.type == 'NextCloseField' %}
-                </fieldset>
+                    {% for error in form.errors[field.name] %}
+                        <div class="alert alert-error">
+                            <div data-alert class="alert-box alert radius">
+                                {{ error }}
+                                <a href="#" class="close">&times;</a>
+                            </div>
+                        </div>
+                    {% endfor %}
 
-            {% elif field.type == 'ExceptionsField' %}
-                {{ ExceptionsFieldset() }}
+                    {% if field.type == 'FormField' %}
+                        <div class="large-6 columns">
+                            {{ ExceptionForm(field) }}
+                        </div>
 
-            {% elif field.type == 'RadioField' %}
-                {% for subfield in field %}
-                    <label>{{ subfield }}{{ subfield.label }}</label>
+                    {% elif field.type == 'StringField' %}
+                        {% if 'open' in field.name %}
+                            <div class="large-12 columns timeRange">
+                                {{ field(class='time start') }}
+                                {% elif 'close' in field.name %}
+                                - {{ field(class='time end') }}
+                            </div>
+                        {% else %}
+                            {{ field(class='datepicker') }}
+                        {% endif %}
+
+                    {% elif field.type == 'NextOpenField' %}
+                        <fieldset>
+                            <legend>Next</legend>
+
+                            {% elif field.type == 'NextCloseField' %}
+                        </fieldset>
+
+                    {% elif field.type == 'ExceptionsField' %}
+                        {{ ExceptionsFieldset() }}
+
+                    {% elif field.type == 'RadioField' %}
+                        {% for subfield in field %}
+                            <label>{{ subfield }}{{ subfield.label }}</label>
+                        {% endfor %}
+                    {% else %}
+                        {{ field() }}
+                    {% endif %}
                 {% endfor %}
-            {% else %}
-              {{ field() }}
-            {% endif %}
-        {% endfor %}
-        <button type="submit" id="office-hours-submit-btn" class="button postfix">Submit</button>
-    </form>
-  </div>
-</div>
+                <button type="submit" id="office-hours-submit-btn" class="button postfix">Submit</button>
+            </form>
+        </div>
+    </div>
 
 {% endblock %}
 
@@ -151,64 +154,66 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.1/js/bootstrap-datepicker.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/datepair.js/0.4.14/jquery.datepair.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.1/css/bootstrap-datepicker.standalone.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.min.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.1/css/bootstrap-datepicker.standalone.css">
 
 
     <script type="text/javascript">
+        $(document).ready(function () {
+            var csrftoken = "{{ csrf_token() }}";
+            activateCSRF(csrftoken);
 
-        function dateTimePickers(){
-            $('.time').timepicker({
-                'minTime': '6:00am',
-                'maxTime': '8:00pm',
-                'timeFormat': 'h:i A'
-            });
-            $('.timeRange').datepair({
-                'defaultTimeDelta': 32400000
-            });
-            $('.datepicker').datepicker({
-                format: 'mm/dd/yyyy'
-            });
-        }
-
-        $(document).ready(function(){
-            dateTimePickers();
-        });
-    </script>
-
-    <script type="text/javascript">
-
-
-        $("#add_exception_button").on('click', function(){
-            var last = $(".exceptions-fieldset").last();
-            var old_num = last.children()[0].textContent.replace("Exception ", "");
-            var new_num = (parseInt(old_num) + 1);
-            var new_exception = newFieldset(new_num);
-            new_exception.insertAfter(last);
-            $("#remove_exception_button").show();
-            dateTimePickers();
-
-        });
-
-
-        $("#remove_exception_button").click(function(){
-            var list = $(".exceptions-fieldset");
-            if (list.length == 2){
-              $("#remove_exception_button").hide();
+            function dateTimePickers() {
+                $('.time').timepicker({
+                    'minTime': '6:00am',
+                    'maxTime': '8:00pm',
+                    'timeFormat': 'h:i A'
+                });
+                $('.timeRange').datepair({
+                    'defaultTimeDelta': 32400000
+                });
+                $('.datepicker').datepicker({
+                    format: 'mm/dd/yyyy'
+                });
             }
-            list.last().remove();
-        });
 
-        function populateFieldset(id, exception){
-            var dateid = '#date' + id;
-            var openid = '#open' + id;
-            var closeid = '#close' + id;
-            $(dateid).val(exception['date']);
-            $(openid).val(exception['open']);
-            $(closeid).val(exception['close']);
-        }
+            $(document).ready(function () {
+                dateTimePickers();
+            });
 
-        function newFieldset(id){
+
+            $("#add_exception_button").on('click', function () {
+                var last = $(".exceptions-fieldset").last();
+                var old_num = last.children()[0].textContent.replace("Exception ", "");
+                var new_num = (parseInt(old_num) + 1);
+                var new_exception = newFieldset(new_num);
+                new_exception.insertAfter(last);
+                $("#remove_exception_button").show();
+                dateTimePickers();
+
+            });
+
+
+            $("#remove_exception_button").click(function () {
+                var list = $(".exceptions-fieldset");
+                if (list.length == 2) {
+                    $("#remove_exception_button").hide();
+                }
+                list.last().remove();
+            });
+
+            function populateFieldset(id, exception) {
+                var dateid = '#date' + id;
+                var openid = '#open' + id;
+                var closeid = '#close' + id;
+                $(dateid).val(exception['date']);
+                $(openid).val(exception['open']);
+                $(closeid).val(exception['close']);
+            }
+
+            function newFieldset(id) {
                 var date = 'date' + id;
                 var open = 'open' + id;
                 var close = 'close' + id;
@@ -228,44 +233,44 @@
                 node.append(div);
 
                 return node;
-         }
+            }
 
 
-        $(document).ready(function(){
+            $(document).ready(function () {
 
-            {% if edit_data['exceptions'] %}
-                var exceptions = {{ edit_data['exceptions']|safe }};
-                var i = 0;
-                while (i < 200){
+                {% if edit_data['exceptions'] %}
+                    var exceptions = {{ edit_data['exceptions']|safe }};
+                    var i = 0;
+                    while (i < 200) {
 
-                    exception = exceptions[i];
-                    if (!exception){
-                      break;
+                        exception = exceptions[i];
+                        if (!exception) {
+                            break;
+                        }
+                        //Convert to correct value
+                        id = i + 1;
+
+                        //If this is not the first node, create it before we can populate it and insert after the last one.
+                        //show the remove buton
+                        if (i != 0) {
+                            var last = $(".exceptions-fieldset").last();
+                            var new_exception = newFieldset(id);
+                            new_exception.insertAfter(last);
+                            $("#remove_exception_button").show();
+                        }
+
+                        populateFieldset(id, exception);
+
+                        i++;
+
                     }
-                    //Convert to correct value
-                    id = i + 1;
+                    {#                //dateTimePickers();#}
 
-                    //If this is not the first node, create it before we can populate it and insert after the last one.
-                    //show the remove buton
-                    if(i != 0){
-                      var last = $(".exceptions-fieldset").last();
-                      var new_exception = newFieldset(id);
-                      new_exception.insertAfter(last);
-                      $("#remove_exception_button").show();
-                    }
-
-                    populateFieldset(id, exception);
-
-                    i++;
-
-                }
-{#                //dateTimePickers();#}
-
-            {% endif %}
+                {% endif %}
 
 
+            });
         });
-
 
     </script>
 
