--- a/tinker/templates/creativeTim_base.html
+++ b/tinker/templates/creativeTim_base.html
@@ -31,6 +31,7 @@
             <link href="/static/assets/css/tinker.css" rel="stylesheet"/>
 
             <!--  Fonts and icons     -->
+            {# todo: temporary fix since the maxcdn is down, change back to maxcdn when able #}
             <link href="https://opensource.keycdn.com/fontawesome/4.6.3/font-awesome.min.css" rel="stylesheet">
 {#            <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">#}
             <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
