--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -23,6 +23,10 @@ h3 {
     margin-top: 0px;
 }
 
+.last-published-header {
+    padding-left: 0px;
+}
+
 .no-border {
     border: 0;
 }
@@ -73,6 +77,10 @@ ul.dropdown-menu {
 
 a.more-info {
     margin-bottom: 10px;
+}
+
+#more-info-title {
+    padding-left: 45px;
 }
 
 a.new-btn {
@@ -247,7 +255,7 @@ textarea {
 }
 
 #publish-modal {
-    width: 95%;
+    width: 90%;
 }
 
 /* todo: come up with a way to generalize these tags */
@@ -311,15 +319,6 @@ div#cke_registration_details {
     background-color: #F5F5F5;
     box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0);
 }
-
-/*#more-info-card {*/
-    /*!*background-color: #A2968A;*!*/
-    /*box-shadow: 3px 4px 4px 3px rgba(0, 0, 0, 0.1);*/
-/*}*/
-
-/*#more-info-content {*/
-    /*padding-top: 90px;*/
-/*}*/
 
 .nav .active a {
     color: #DE8626 !important;
