--- a/tinker/admin/publish/templates/publish-home.html
+++ b/tinker/admin/publish/templates/publish-home.html
@@ -11,7 +11,7 @@
 
 {% block main_content %}
     <div class="content">
-        <div class="container-fluid">
+        <div class="row">
             <h3 class="row subtitle">Automated publishers</h3>
             <hr/>
             <div class="row">
