--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -537,3 +537,11 @@ input[type='checkbox']:checked:hover:after {
         max-width: 100%;
     }
 }
+
+.other, .topic, .delete-checkbox{
+    margin-left: 20% !important
+}
+
+.outcome {
+    margin-left: 30%
+}
