--- a/tinker/admin/program_search/templates/index.html
+++ b/tinker/admin/program_search/templates/index.html
@@ -12,7 +12,7 @@
     <div>
         <div class="row">
             <form id='program_search_form' method="post">
-                <input name=_csrf_token type=hidden value="{{ csrf_token() }}">
+                <input id="csrf_token" name="csrf_token" type="hidden" value="{{ csrf_token() }}">
                 <div class="large-6 columns">
                     <label for="key">Concentration Code or Program Name:</label>
 {#                    <input type="text" name="key" id='search-key' class='search-input' placeholder="Filter Key" />#}
@@ -73,7 +73,7 @@
 {# Delete confirm modal #}
 <div id="confirmModal" class="reveal-modal" data-reveal>
   <h2>Are you sure you want to delete?</h2>
-  <p class="lead">The redirect will be gone forever and forever.</p>
+  <p class="lead">The program tag will be gone forever and forever.</p>
 
   <button class="modal-confirm" id="modal-confirm" data-delete-path="">Delete</button>
   <a class="close-reveal-modal">&#215;</a>
@@ -158,7 +158,7 @@
 
              $.ajax({
                 type: "POST",
-                url: "{{ url_for('program_search.ProgramSearchView:post') }}",
+                url: "{{ url_for('program_search.ProgramSearchView:submit') }}",
                 data: JSON.stringify(formData),
                 contentType: 'application/json;charset=UTF-8',
                 success: function (result) {
